5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1637_2446.log
== TEST (2019-04-08 20:21:48) 
-- CODE:
d= int(input("insira o codigo: "))
d1= d%10
d2=
d3=
d4=
d5=
d6=
print(d1)
-- ERROR:
File "XXXX", line 3
    d2=
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:21:58) 
-- CODE:
d= int(input("insira o codigo: "))
d1= d%10

print(d1)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:23:25) 
-- CODE:
d= int(input("insira o codigo: "))
d1= d%10
d2=d/10 %10
d3=d/100%10
d4=d/1000%10
d5=d/10000%10
d6=d/100000%10
print(d1,d2,d3,d4,d5,d6)

-- OUTPUT:
2 1.2000000000007276 6.1200000000000045 7.611999999999995 8.7612 0.87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:23:44) 
-- CODE:
d= int(input("insira o codigo: "))
d1= d%10
d2=d/10 %10
d3=d//100%10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
print(d1,d2,d3,d4,d5,d6)

-- OUTPUT:
2 1.2000000000007276 6 7 8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:24:20) 
-- CODE:
d= int(input("insira o codigo: "))
d1= d%10
d2=d/10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
print(d1,d2,d3,d4,d5,d6)

-- OUTPUT:
2 1.2000000000007276 6 7 8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:24:45) 
-- CODE:
d= int(input("insira o codigo: "))
d1= d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
print(d1,d2,d3,d4,d5,d6)

-- OUTPUT:
2 1 6 7 8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:26:30) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(s1%s2)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:27:50) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print((s1%s2)==0)

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:33:09) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(10%2)

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:33:27) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(10%2)

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:33:59) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(18%6)

-- OUTPUT:
False
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:34:08) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(18%6==0)

-- OUTPUT:
True
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:36:44) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
if s1%s2==0:
	print("acesso liberado")
if s1%s2!=0:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:39:12) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(d4,d5,d6)
-- OUTPUT:
7 8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:41:13) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(d1,d2,d3,d4,d5,d6)
-- OUTPUT:
2 1 6 7 8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:42:17) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
print(d1,d2,d3,d4,d5,d6)
print(s1%s2,s2%s1)
-- OUTPUT:
2 1 6 7 8 0
8 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:50:41) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
p1=s1%s2
p2=s2%s1
l="verd"
if p1==0:
	p1==l
if p2==0:
	p2==l
print(l)
-- OUTPUT:
verd
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:50:57) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
p1=s1%s2
p2=s2%s1
l="verd"
if p1==0:
	p1==l
if p2==0:
	p2==l
print(l)
-- OUTPUT:
verd
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:52:52) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
p1=s1%s2
p2=s2%s1
v="acesso liberado"
f="senha invalida"
if p1==0:
	print(v)
if p2==0:
	print(v)
else:
	print(f)

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:53:18) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
p1=s1%s2
p2=s2%s1
v="acesso liberado"
f="senha invalida"
if p1==0:
	print(v)
if p2==0:
	print(v)
else:
	print(f)

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:53:27) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
p1=s1%s2
p2=s2%s1
v="acesso liberado"
f="senha invalida"
if p1==0:
	print(v)
if p2==0:
	print(v)
else:
	print(f)

-- EXECUTION TIME:
0.169361
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 10:29:22) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
p1=s1%s2
p2=s2%s1
v="acesso liberado"
f="senha invalida"
if p1==0 or p2==0 :
	print(v)
else:
	print(f)

-- EXECUTION TIME:
0.20799
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:38:45) 
-- CODE:
d= int(input("insira o codigo: "))
d1=d%10
d2=d//10 %10
d3=d//100 %10
d4=d//1000%10
d5=d//10000%10
d6=d//100000%10
s1=d2+d4+d6
s2=d1+d3+d5
p1=s1%s2
p2=s2%s1
v="acesso liberado"
f="senha invalida"
if p1==0 or p2==0 :
	print(v)
else:
	print(f)

-- EXECUTION TIME:
0.168633
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
